# parquet-inspector

./: .coveragerc  .gitignore  .python-version  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
src/parquet_inspector/: main.py
tests/: test_main.py
tests/data/parquet/: 1.parquet  2.parquet  3.parquet
tests/data/parquet/partitioned.parquet/: 3efcb64064584db79c125a21867ba23a-0 copy.parquet
