[tool.poetry]
name = "parquet-inspector"
version = "0.1.0"
description = "CLI tool for inspecting parquet files."
authors = ["Dominic Thorn <dominic.thorn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
pqi = "parquet_inspector.main:main"

[tool.poetry.dependencies]
python = "^3.6.2"
pyarrow = ">=6.0.0"

[tool.poetry.dev-dependencies]
pytest = {version = "^6.0.0", python = ">=3.8,<4"}
black = {version = "^21.5b2", python = ">=3.8,<4"}
flake8 = {version = "^3.9.2", python = ">=3.8,<4"}
isort = {version = "^5.11.3", python = ">=3.8,<4"}
mypy = {version = "^0.910", python = ">=3.8,<4"}
tox = {version = "^3.27.1", python = ">=3.8,<4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
